fix: center align My Contributions section header text (mobile only)

--- a/src/features/user/MFV2/MyContributions/MyContributions.module.scss
+++ b/src/features/user/MFV2/MyContributions/MyContributions.module.scss
@@ -187,6 +187,7 @@
     font-size: $fontLarge;
     color: $primaryDarkColor;
     font-weight: 700;
+    text-align: center;
   }
 
   .iconContainer {
@@ -208,6 +209,7 @@
 
     .headerTitle {
       margin-bottom: 50px;
+      text-align: left;
     }
   }
 
